# mcp-bench

./: .env.example  .gitignore  LICENSE  METRICS.md  README.md  RESEARCH.md
backend/: pyproject.toml
backend/scripts/: cluster_failures.py  probe_server.py  provider_variance.py  publish_dataset.py  render_leaderboard.py  run_grid.py  servers.md  setup_postgres.ps1  smoke_test.py  validate_models.py
backend/src/mcp_bench/: agent.py  mcp_client.py  metrics.py  providers.py  runner.py  tasks.py
backend/tasks/: fetch.json  filesystem.json  github.json  memory.json  postgres.json  sqlite.json
frontend/: README.md  app.py  pyproject.toml  requirements.txt
frontend/data/: failure_patterns.md  leaderboard.json  per_task_results.json  tasks.json
frontend/scripts/: bundle.py  deploy_space.py
reports/: leaderboard.md  mcp-bench-v0.1.md  provider_notes.md
