[project]
name = "mcp-bench-frontend"
version = "0.1.0"
description = "Gradio frontend for MCP-Bench — leaderboard, task explorer, failure analysis"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.40",
    "pandas>=2.2",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
